--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "morgan": "~1.9.1",
+    "nodemon": "^3.0.1",
     "pug": "^3.0.2"
   },
   "main": "app.js",
